fix z-index of input bg

--- a/resources/frontend/src/components/inputs/Themed/mixins/outlineInputMixin.scss
+++ b/resources/frontend/src/components/inputs/Themed/mixins/outlineInputMixin.scss
@@ -58,6 +58,7 @@ div.container {
             width: 100%;
 
             position: relative;
+            z-index: 1;
 
             border-radius: 20000px;
 
@@ -98,7 +99,7 @@ div.container {
             }
 
             &:before {
-                content: "";
+                content: '';
                 position: absolute;
                 top: 0;
                 bottom: 0;
